--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<main class="container">
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <app-todo></app-todo>
-    </div>
-  </div>
+<main role="main" class="container">
+  <router-outlet></router-outlet>
 </main>
